--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "reveal.js": "~3.2.0",
-    "highlightjs": "~9.0.0"
+    "highlightjs": "~9.0.0",
+    "Ionicons": "ionicons#^2.0.1"
   }
 }
